[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-to-confluence"
description = "Publish Markdown files to Confluence wiki"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["markdown", "converter", "confluence"]
license = "MIT"
authors = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
maintainers = [
    { name = "Levente Hunyadi", email = "hunyadi@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]
dependencies = [
    "cattrs >= 25.3",
    "lxml >= 6.0",
    "markdown >= 3.10",
    "orjson >= 3.11",
    "pymdown-extensions >= 10.19",
    "PyYAML >= 6.0",
    "requests >= 2.32",
    "truststore >= 0.10",
    "typing-extensions >= 4.15; python_version < '3.12'"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "markdown_doc >= 0.1.6",
    "types-lxml >= 2025.11.25",
    "types-markdown >= 3.10",
    "types-PyYAML >= 6.0",
    "types-requests >= 2.32",
    "mypy >= 1.19",
    "ruff >= 0.14"
]
formulas = [
    "matplotlib >= 3.9"
]

[project.urls]
"Homepage" = "https://github.com/hunyadi/md2conf"
"Source" = "https://github.com/hunyadi/md2conf"

[project.scripts]
md2conf = "md2conf.__main__:main"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["md2conf*"]

[tool.setuptools.dynamic]
version = { attr = "md2conf.__version__" }

[tool.setuptools.package-data]
"md2conf" = ["entities.dtd", "puppeteer-config.json", "py.typed"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "B", "I", "Q"]
