[metadata]
name = markdown-to-confluence
version = attr: md2conf.__version__
description = Publish Markdown files to Confluence wiki
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/md2conf
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    lxml
    markdown
    pymdown-extensions
    requests

[options.packages.find]
exclude =
    tests*
