[metadata]
name = markdown-to-confluence
version = attr: md2conf.__version__
description = Publish Markdown files to Confluence wiki
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/md2conf
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    lxml >= 4.9
    markdown >= 3.5
    pymdown-extensions >= 10.3
    requests >= 2.31
    types-markdown >= 3.5
    types-requests >= 2.31

[options.packages.find]
exclude =
    tests*

[options.package_data]
md2conf =
    entities.dtd
    py.typed
