[metadata]
name = markdown-to-confluence
version = attr: md2conf.__version__
description = Publish Markdown files to Confluence wiki
author = Levente Hunyadi
author_email = hunyadi@gmail.com
url = https://github.com/hunyadi/md2conf
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    lxml >= 5.3
    types-lxml >= 2024.8.7
    markdown >= 3.6
    types-markdown >= 3.6
    pymdown-extensions >= 10.9
    requests >= 2.32
    types-requests >= 2.32

[options.packages.find]
exclude =
    tests*

[options.package_data]
md2conf =
    entities.dtd
    puppeteer-config.json
    py.typed

[options.entry_points]
console_scripts =
    md2conf = md2conf.__main__:main

[flake8]
extend_ignore = DAR101,DAR201,DAR301,DAR401
max_line_length = 180
